[build-system]
requires = ["briefcase"]

[project]
name = "mythweave-rpg"
version = "0.1.0"
description = "Mythweave RPG - an original tabletop-fantasy MVP (packs + scenes + dice)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "toga>=0.4.0"
]

[tool.briefcase]
project_name = "Mythweave RPG"
bundle = "com.mythweave"
version = "0.1.0"
url = "https://example.com"
license = "BSD-3-Clause"
author = "Your Name"
author_email = "you@example.com"

[tool.briefcase.app.mythweave_rpg]
formal_name = "Mythweave RPG"
description = "An original tabletop-fantasy MVP: campaign packs, scenes, and dice."
long_description = """\
Mythweave RPG is a data-driven story RPG MVP using JSON packs, with a scene player and a dice roller.
"""
sources = ["src/mythweave_rpg"]
requires = ["toga>=0.4.0"]
